--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
   },
   "dependencies": {
     "big-rational": "^0.10.5",
+    "lodash.clonedeep": "^4.3.2",
     "d3-color": "^0.4.2",
     "d3-interpolate": "^0.7.0",
-    "d3-scale": "^0.6.4",
-    "lodash": "^4.10.0"
+    "d3-scale": "^0.6.4"
   }
 }
